// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render DashboardPage correctly with ExpensesSummary 1`] = `
<div>
  <Connect(ExpensesSummary) />
  <Connect(ExpenseListFilters) />
  <Connect(ExpenseList) />
</div>
`;

exports[`should render DashboardPage correctly without ExpensesSummary 1`] = `
<div>
  <Connect(ExpenseListFilters) />
  <Connect(ExpenseList) />
</div>
`;
